--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "^3.2.7"
   }
 }
